# Content-Monitoring

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tests.py
data/: collected_post.csv  keywords_generated.csv
data/posts/: posts_without_keywords.csv
notebooks/: check.ipynb
src/: collect_bluesky_posts.py  collect_posts.py  create_key_words.py
src/collect/: collect_posts.py  main.py  posts_db.py
src/db/: categories_keywords.py  create_tables.py  postgresql_connector.py  posts_db.py
src/db_postgresql/: create_tables.py  postgresql_connector.py  posts_db.py
src/generator_keywords/: categories_keywords.py  create_key_words.py  main.py  test_db.py
src/utils/: nlp.py
